# spotify-data-parser

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md
apps/: CMakeLists.txt  main.cpp
include/spotify/: song_listens.h
src/: CMakeLists.txt  song_listens.cpp
tests/: CMakeLists.txt  test_spotify.cpp
tests/data/: ExampleOneDay.json
